[package]
name = "rs-matter"
version = "0.1.1"
edition = "2021"
authors = ["Kedar Sovani <kedars@gmail.com>", "Ivan Markov", "Project CHIP Authors"]
description = "Native Rust implementation of the Matter (Smart-Home) ecosystem"
repository = "https://github.com/project-chip/matter-rs"
readme = "README.md"
keywords = ["matter", "smart", "smart-home", "IoT", "ESP32"]
categories = ["embedded", "network-programming"]
license = "Apache-2.0"
rust-version = "1.83"

[features]
default = ["os", "rustcrypto", "log"]
#default = ["os", "mbedtls", "log"] mbedtls is broken since several months - check the root cause

# Sizing

# Number of fabrics
max-fabrics-32 = []
max-fabrics-16 = []
max-fabrics-8 = []
max-fabrics-7 = []
max-fabrics-6 = []
max-fabrics-5 = []
max-fabrics-4 = []
max-fabrics-3 = [] # default
max-fabrics-2 = []
max-fabrics-1 = []

# Number of ACL entries per fabric
max-acls-per-fabric-32 = []
max-acls-per-fabric-16 = []
max-acls-per-fabric-8 = []
max-acls-per-fabric-7 = []
max-acls-per-fabric-6 = []
max-acls-per-fabric-5 = []
max-acls-per-fabric-4 = [] # default
max-acls-per-fabric-3 = []
max-acls-per-fabric-2 = []
max-acls-per-fabric-1 = []

# Number of subjects per ACL entry
max-subjects-per-acl-32 = []
max-subjects-per-acl-16 = []
max-subjects-per-acl-8 = []
max-subjects-per-acl-7 = []
max-subjects-per-acl-6 = []
max-subjects-per-acl-5 = []
max-subjects-per-acl-4 = [] # default
max-subjects-per-acl-3 = []
max-subjects-per-acl-2 = []
max-subjects-per-acl-1 = []

# Number of targets per ACL entry
max-targets-per-acl-32 = []
max-targets-per-acl-16 = []
max-targets-per-acl-8 = []
max-targets-per-acl-7 = []
max-targets-per-acl-6 = []
max-targets-per-acl-5 = []
max-targets-per-acl-4 = []
max-targets-per-acl-3 = [] # default
max-targets-per-acl-2 = []
max-targets-per-acl-1 = []

# Number of sessions
max-sessions-64 = []
max-sessions-32 = []
max-sessions-16 = [] # default
max-sessions-8 = []
max-sessions-7 = []
max-sessions-6 = []
max-sessions-5 = []
max-sessions-4 = []
max-sessions-3 = []

# Number of exchanges per session
max-exchanges-per-session-16 = []
max-exchanges-per-session-8 = []
max-exchanges-per-session-7 = []
max-exchanges-per-session-6 = []
max-exchanges-per-session-5 = [] # default
max-exchanges-per-session-4 = []
max-exchanges-per-session-3 = []

# Number of BTP sessions
max-btp-sessions-8 = []
max-btp-sessions-4 = []
max-btp-sessions-2 = []
max-btp-sessions-1 = [] # default

# General
astro-dnssd = ["os", "dep:astro-dnssd"]
zeroconf = ["os", "dep:zeroconf"]
zbus = ["dep:zbus", "os", "futures-lite", "libc", "uuid", "async-io"]
os = ["std", "backtrace", "critical-section/std", "embassy-sync/std", "embassy-time/std"]
std = ["alloc", "rand"]
backtrace = []
alloc = ["defmt?/alloc"]
openssl = ["alloc", "dep:openssl", "foreign-types", "hmac", "sha2"]
mbedtls = ["alloc", "dep:mbedtls"]
rustcrypto = ["alloc", "digest", "sha2", "hmac", "pbkdf2", "hkdf", "aes", "ccm", "p256", "sec1", "elliptic-curve", "crypto-bigint", "x509-cert", "rand_core"]
defmt = ["dep:defmt", "heapless/defmt-03", "embassy-time/defmt"]
log = ["dep:log", "embassy-time/log"]
debug-tlv-payload = []
large-buffers = [] # TCP support

[dependencies]
rs-matter-macros = { version = "0.1", path = "../rs-matter-macros" }
cfg-if = "1"
bitflags = { version =  "2.5", default-features = false }
heapless = "0.8"
num = { version = "0.4", default-features = false }
num-derive = "0.4"
num-traits = { version = "0.2", default-features = false }
strum = { version = "0.26", features = ["derive"], default-features = false }
log = { version = "0.4", optional = true }
defmt = { version = "0.3", optional = true, features = ["ip_in_core"] }
subtle = { version = "2.5", default-features = false }
time = { version = "0.3", default-features = false }
verhoeff = { version = "1", default-features = false }
embassy-futures = "0.1.2"
embassy-time = "0.5"
embassy-sync = "0.7"
either = { version = "1", default-features = false }
critical-section = "1.1"
domain = { version = "0.10", default-features = false, features = ["heapless"] }
qrcodegen-no-heap = "1.8"
scopeguard = { version = "1", default-features = false }
pinned-init = { version = "0.0.10", default-features = false }

# crypto
openssl = { version = "0.10", optional = true }
foreign-types = { version = "0.3", optional = true }
mbedtls = { version = "0.12", optional = true, features = ["x509"] }

# rust-crypto
digest = { version = "0.10", default-features = false, optional = true }
sha2 = { version = "0.10", default-features = false, optional = true }
hmac = { version = "0.12", optional = true }
pbkdf2 = { version = "0.12", optional = true }
hkdf = { version = "0.12", optional = true }
aes = { version = "0.8", optional = true }
ccm = { version = "0.5", default-features = false, features = ["alloc"], optional = true }
p256 = { version = "0.13", default-features = false, features = ["arithmetic", "ecdh", "ecdsa"], optional = true }
sec1 = { version = "0.7", default-features = false, optional = true }
elliptic-curve = { version = "0.13", optional = true }
crypto-bigint = { version = "0.6", default-features = false, optional = true }
rand_core = { version = "0.6", default-features = false, optional = true }
x509-cert = { version = "0.2", default-features = false, features = ["pem"], optional = true } # TODO: requires `alloc`

# STD
rand = { version = "0.8", optional = true, default-features = false, features = ["std", "std_rng"] }
async-io = { version = "2", optional = true, default-features = false }
async-compat = { version = "0.2", optional = true, default-features = false }

# OS
zbus = { version = "5.8", optional = true }
uuid = { version = "1", optional = true, features = ["v4"] }
libc = { version = "0.2", optional = true }
futures-lite = { version = "2", optional = true }
astro-dnssd = { version = "0.3", optional = true }
zeroconf = { version = "0.15", optional = true }

[target.'cfg(all(unix, not(target_os = "espidf")))'.dependencies]
bitflags = "2"
nix = { version = "0.27", features = ["net"] }

[target.'cfg(target_os = "linux")'.dependencies]
bluer = { version = "0.17", features = ["bluetoothd"] }
tokio = { version = "1" }
tokio-stream = { version = "0.1" }

[dev-dependencies]
log = "0.4"
env_logger = "0.11"
nix = { version = "0.27", features = ["net"] }
futures-lite = "2"
async-channel = "2"
static_cell = "2"
similar = "2.6"
embassy-time-queue-utils = { version = "0.3", features = ["generic-queue-64"] }
trybuild = "1"
