[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
rs-matter = { path = "../rs-matter", default-features = false, features = ["rustcrypto", "os", "async-io"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.0", features = ["derive"] }
which = "4.4"
tempfile = "3.8"
async-io = "2"
embassy-time = { version = "0.5", features = ["std"] }
embassy-time-queue-utils = { version = "0.3", features = ["generic-queue-64"] }
futures-lite = "2"
socket2 = "0.5"
nix = { version = "0.30", features = ["net"] }
