[package]
name = "xtask"
version = "0.2.0"
edition = "2021"
authors = ["Kedar Sovani <kedars@gmail.com>", "Ivan Markov", "Project CHIP Authors"]
description = "Native Rust implementation of the Matter (Smart-Home) ecosystem - xtask"
repository = "https://github.com/project-chip/rs-matter"
readme = "README.md"
keywords = ["matter", "smart", "smart-home", "IoT"]
categories = ["embedded", "network-programming"]
license = "Apache-2.0"
rust-version = "1.87"
publish = false

[dependencies]
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.0", features = ["derive"] }
which = "4.4"
tempfile = "3.8"
async-io = "2"
embassy-sync = "0.8"
embassy-futures = "0.1"
embassy-time = { version = "0.5", features = ["std"] }
embassy-time-queue-utils = { version = "0.3", features = ["generic-queue-64"] }
futures-lite = "2"
rand = { version = "0.8", features = ["std", "std_rng"] }
static_cell = "1"
socket2 = { version = "0.5", features = ["all"] }
nix = { version = "0.30", features = ["net"] }
heapless = "0.9"

[target.'cfg(target_os = "macos")'.dependencies]
rs-matter = { path = "../rs-matter", default-features = false, features = ["rustcrypto", "os", "async-io", "log", "astro-dnssd"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
rs-matter = { path = "../rs-matter", default-features = false, features = ["rustcrypto", "os", "async-io", "log"] }
