[package]
name = "tlv_tool"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
matter-iot = { path = "../../matter" }
log = {version = "0.4.14", features = ["max_level_trace", "release_max_level_warn"]}
simple_logger = "1.16.0"
clap = "2.34"
